Lesson-28.Admission_Controllers/k8s-admission-webhook/2.Demo-ImageValidation/k8s-image-validator/validating-webhook-temp.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: image-validator
  labels:
    app: image-validator
webhooks:
  - name: image-validator.image-validator-demo.svc
    clientConfig:
      service:
        name: image-validator
        namespace: image-validator-demo
        path: "/validate"
        port: 8443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ0RENDQXNpZ0F3SUJBZ0lVYVFzc1BTS3hiTnIrOXlYaGFpcG5IYTU1MmVVd0RRWUpLb1pJaHZjTkFRRUwKQlFBd016RXhNQzhHQTFVRUF3d29hVzFoWjJVdGRtRnNhV1JoZEc5eUxtbHRZV2RsTFhaaGJHbGtZWFJ2Y2kxawpaVzF2TG5OMll6QWVGdzB5TlRFd01qQXhPVFU0TkRCYUZ3MHlOakV3TWpBeE9UVTROREJhTURNeE1UQXZCZ05WCkJBTU1LR2x0WVdkbExYWmhiR2xrWVhSdmNpNXBiV0ZuWlMxMllXeHBaR0YwYjNJdFpHVnRieTV6ZG1Nd2dnRWkKTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFEZGxxYldLQU0vM1pVRDdnZFJwYlpvay9rdgovNDE4Z0dFOWRF [...]
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions: ["v1"]
    timeoutSeconds: 10
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values: [image-validator-demo, kube-system]
